# pcl-learning

./: .gitignore  LICENSE  PCL(Point Cloud Library)学习指南&资料推荐.md  PCL学习指南&资料推荐.md  README.md
00base/: pcl_version.cpp
00base/00pcd_write/: CMakeLists.txt
00base/01matrix_transform/: CMakeLists.txt
00pcd_write/: pcd_write.cpp
01matrix_transform/: matrix_transform.cpp
02kdtree/1kdtree_search/: CMakeLists.txt  kdtree_search.cpp
03octree/1point_cloud_compression/: CMakeLists.txt  point_cloud_compression.cpp
03octree/2Spatial Partitioning and Search Operations with Octrees/1octree_search/: CMakeLists.txt  octree_search.cpp
03octree/2Spatial Partitioning and Search Operations with Octrees/2octree_change_detection/: CMakeLists.txt  octree_change_detection.cpp
03octree/3point_cloud_compression/: point_cloud_compression.cpp
04search搜索/01K近邻搜索/: CMakeLists.txt  k_nearest_neighbor_search.cpp
04search搜索/02体素近邻搜索/: CMakeLists.txt  neighbors_within_voxel_search.cpp
04search搜索/03半径内近邻搜索/: CMakeLists.txt  neighbors_within_radius_search.cpp
05sampleconsensus抽样一致性模块/1随机采样一致性算法/: CMakeLists.txt  random_sample_consensus.cpp
05sampleconsensus抽样一致性模块/2随机采样一致性算法/: CMakeLists.txt  random_sample_consensus.cpp
06range-images深度图像/1从点云创建深度图/: CMakeLists.txt  range_image_creation.cpp
06range-images深度图像/2从深度图中提取边界/: CMakeLists.txt  range_image_border_extraction.cpp
07tracking跟踪/: tracking.md
08IO输入输出/1write_pcd/: CMakeLists.txt  write_pcd.cpp
08IO输入输出/2read_pcd/: CMakeLists.txt  read_pcd.cpp
08IO输入输出/3concatenate_clouds/: CMakeLists.txt  concatenate_clouds.cpp
08IO输入输出/4openni_grabber/: CMakeLists.txt  openni_grabber.cpp
09filters滤波/1直通滤波器进行滤波处理/: CMakeLists.txt  passthrough.cpp
09filters滤波/2VoxelGrid滤波器对点云进行下采样/: CMakeLists.txt  voxel_grid.cpp
09filters滤波/3滤波器移除离群点/: CMakeLists.txt  statistical_removal.cpp  table_scene_lms400_outliers.pcd
09filters滤波/4使用参数化模型投影点云/: CMakeLists.txt  project_inliers.cpp
09filters滤波/5从一个点云中提取索引/: CMakeLists.txt  extract_indices.cpp  table_scene_lms400_downsampled.pcd  table_scene_lms400_plane_0.pcd  table_scene_lms400_plane_1.pcd
09filters滤波/6用ConditionalRemoval或RadiusOutlinerRemoval移除离群点/: CMakeLists.txt  remove_outliers.cpp
09filters滤波/7双边滤波/: CMakeLists.txt  bilateral_filter.cpp
10features特征/1法向量估计/: CMakeLists.txt  normal_estimation.cpp
10features特征/2估计点云子集的表面法线/: CMakeLists.txt
10features特征/2估计点云子集的表面法线(error)/: normal_estimation_subdset_points.cpp
10features特征/3使用积分图进行法线估计/: CMakeLists.txt  normal_estimation_using_integral_images.cpp
10features特征/4点特征直方图（PFH）描述子/: CMakeLists.txt  PFH.cpp  PFH1.cpp
10features特征/5快速点特征直方图(FPFH)描述子/: CMakeLists.txt  FPFH.cpp
10features特征/6从一个深度图像（range image）中提取NARF特征/: CMakeLists.txt  narf_feature_extraction.cpp
11surface表面 /2在平面模型上提取凸（凹）多边形/: CMakeLists.txt  table_scene_mug_stereo_textured_hull.pcd
11surface表面 /4将修剪的B样条曲线拟合到无序点云/: CMakeLists.txt  bspline_fitting.cpp  fitting_curve_2d.cpp
11surface表面 /5平面点云B样条曲线拟合/: fitting_curve_2d.cpp
11surface表面/1基于多项式重构的平滑和法线估计/: CMakeLists.txt  resampling.cpp
11surface表面/2在平面模型上提取凸（凹）多边形/: hull_2d.cpp
11surface表面/3无序点云的快速三角化/: CMakeLists.txt  greedy_projection.cpp
11surface表面/5平面点云B样条曲线拟合/: CMakeLists.txt
12segmentation分割/1planar_segmentation/: CMakeLists.txt  planar_segmentation.cpp
12segmentation分割/2cylinder_segmentation/: CMakeLists.txt  cylinder_segmentation.cpp
12segmentation分割/3欧式聚类提取/: CMakeLists.txt  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cluster_extraction.cpp
13recognition识别/1基于对应分组的三维物体识别/: CMakeLists.txt  correspondence_grouping.cpp
13recognition识别/2隐式形状模型 ISM (Implicit Shape Model)/: CMakeLists.txt  implicit_shape_model.cpp  ism_train_horse.pcd  ism_train_lioness.pcd
13recognition识别/33D物体识别的假设检验/: CMakeLists.txt  global_hypothesis_verification.cpp
14registration配准/1使用迭代最近点算法(ICP)/: CMakeLists.txt  iterative_closest_point.cpp
14registration配准/2如何逐步匹配多幅点云/: CMakeLists.txt  pairwise_incremental_registration.cpp
14registration配准/2如何逐步匹配多幅点云/pairwise/: frame_00000.pcd
14registration配准/3配准之交互式ICP/: CMakeLists.txt  interactive_icp.cpp
14registration配准/4正态分布变换配准(NDT)/: CMakeLists.txt  normal_distributions_transform.cpp
14registration配准/5刚性物体的鲁棒姿态估计/: CMakeLists.txt  alignment_prerejective.cpp
15visualization可视化/0base/: demo.cpp  ism_train_cat.pcd
15visualization可视化/1cloud_viewer/: CMakeLists.txt  cloud_viewer.cpp
15visualization可视化/2pcl_visualizer_demo/: pcl_visualizer_demo.cpp
15visualization可视化/2range_image_visualization/: CMakeLists.txt  range_image_visualization.cpp
15visualization可视化/3.0pcl_visualizer_simple/: 1pcl_visualizer_simple.cpp  CMakeLists.txt
15visualization可视化/3pcl_visualizer_demo/: CMakeLists.txt  pcl_visualizer_demo.cpp
15visualization可视化/4multi_pcl_visualizer/: CMakeLists.txt  multi_pcl_visualizer.cpp
15visualization可视化/PCLVisualizer/01vis_single_frame/: 01vis_single_frame.cpp  CMakeLists.txt
15visualization可视化/PCLVisualizer/02vis_continuous_frame/: CMakeLists.txt  vis_continuous_frame.cpp
15visualization可视化/PCLVisualizer/03vis_continuous_frame_by_mouse/: CMakeLists.txt  vis_continuous_frame_by_mouse.cpp
16keypoints关键点/1从深度图像中提取 NARF关键点/: CMakeLists.txt  narf_keypoint_extraction.cpp
CodeSnippets代码片段/: smippets.cpp  snippets.cpp
PCL1.11/kmeans/: CMakeLists.txt  KMeans.cpp  KMeans.h  main.cpp
PCL1.11/powerlinesegment/: CMakeLists.txt  power_line_segment.cpp  power_line_segment1.cpp
PCL1.11/powerlinesegment/script/: Linearity.py  (+1 more)
data/: monkey.ply  table_scene_lms400_downsampled.pcd
data/calibra_2023-07-06-15-05-08/: pointcloud_1.ply  pointcloud_15.ply  pointcloud_5.ply
data/train_test/: ism_test_cat.pcd  ism_train_michael.pcd
data/vis_continuous_frame/: pointcloud_2.ply  pointcloud_3.ply
practice/01pcd和text相互转换/: 1600050937.416284.pcd  labelme_test.txt  pcd_to_txt.cpp  txt_to_pcd.cpp
practice/02直线拟合/: 01lineFit.cpp  CMakeLists.txt
practice/03lidar2img/: 01PointXYZlidar2image.cpp  02PointXYZRGBlidar2image.cpp  CMakeLists.txt
repo/PCL1/: PCL1.sln
模板/: CMakeLists.txt
(+6 files in other folders)
